Change log for hexer, the multi-view binary editor

1.0.5	not yet ;)
	- correct some typographical and grammatical errors
	- exit with status 0 if -h/--help is specified
	- output the usage message to the standard error stream if
	  an invalid command-line option is specified
	- add the -V/--version command-line option

1.0.4	2018/03/24
	- allow hexer to be cross-built: if CC_FOR_BUILD is defined in
	  the build environment, use it as the command to build bin2c as
	  submitted by Helmut Grohne <helmut@subdivi.de>.
	- fix undefined behavior by shifting an unsigned, not a signed,
	  value the maximum number of bits to the left.

1.0.3	2016/10/16
	- correct a couple of grammatical nits in the README file.

1.0.2	2016/10/13
	- correct some more typographical errors reported by
	  Jakub Wilk <jwilk@debian.org>

1.0.1	2016/10/12
	- update the date in the manual page for the typographical
	  errors fixed in 1.0.0.
	- add the year 2016 to the copyright notices of the changed files

1.0.0	2016/10/12
	- most of the following portability fixes were prompted by
	  build failure reports on FreeBSD by
	  Anastasios Mageirias <anastasios@mageirias.com>
	- drop support for ancient compilers that do not support
	  the "const" keyword or do not provide the alloca() function
	- fix the build on systems that do not need or have alloca.h and
	  rename the NEED_ALLOCA_H configuration setting to HAVE_ALLOCA_H
	- fix an overzealous double const
	- add a Makefile rule for the compilation of C files for
	  make(1) implementations that do not pass CPPFLAGS.
	- clarify a README comment about the unpacked subdirectory
	- drop the HAVE_NCURSES configuration setting, the support for
	  changing the foreground and background color is autodetected
	- drop the bundled termlib implementation, require termcap support
	- drop the stubs for old-style termio support, the hexer code only
	  works with termios anyway
	- drop the config.* files and autogenerate config.h