@@ -104,6 +104,9 @@ Display a short help message and exit.
 .B \-V,\ \-\-version
 Display program version information and exit.
 .TP
+.B \-F,\ \-\-features
+List the features supported by the program and exit.
+.TP
 .BI + command
 This is equivalent to the
 .B \-c
